<resources>
    <string name="app_name">4party</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_mail">INGRESE UN MAIL VALIDO</string>
    <string name="invalid_passw">CONTRASEÑA NO COINCIDEN</string>
    <string name="title_activity_login_business">LoginBusiness</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--STRING DE REGISTER DE AUTONOMO-->
    <string name="tituloDatosPersonal">Datos Personales</string>
    <string name="titulo2creacioncorreo">Cuenta</string>
    <string name="nombreautono">NOMBRE</string>
    <string name="apellidoautono">APELLIDOS</string>
    <string name="correoautono">CORREO ELECTRONICO</string>
    <string name="dniautonomo">DNI</string>
    <string name="direccionLocal">DIRECCION LOCAL</string>
    <string name="nameEstablecimientoautonomo">NOMBRE DEL ESTABLECIMIENTO</string>
    <string name="contrasenia">CONTRASEÑA</string>
    <string name="botonregister">CREATE ACCOUNT</string>
    <string name="titulo">TITULO</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="descripcionimagen">IMAGEN DEL LOCAL</string>
    <!--   ALERT DIALOG -->
    <string name="alertyes">ACEPTAR</string>
    <string name="alertno">CANCELAR</string>
    <string name="title_activity_oferta_locales">OfertaLocales</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="CONDICIONES4PARTY">Nuestro acuerdo de términos y condiciones abarca diversos aspectos relacionados con el uso de la aplicación, incluyendo, pero no limitado a: Responsabilidades del usuario: Se detallan las acciones y comportamientos que esperamos de usted como usuario de nuestra aplicación. Esto incluye el uso adecuado de los servicios ofrecidos, la protección de su información personal y el respeto hacia otros usuarios. Propiedad intelectual: Se establecen los derechos de propiedad intelectual tanto de nuestra empresa como de terceros, asegurando el cumplimiento de las leyes de derechos de autor y marcas registradas. Se prohíbe la reproducción, distribución o modificación no autorizada del contenido presente en la aplicación. Políticas de pago: Se explican los métodos de pago aceptados, las tarifas correspondientes y las políticas de reembolso en caso de ser aplicables. Privacidad y protección de datos: Se detallan las prácticas de privacidad y protección de datos que utilizamos para garantizar la confidencialidad de su información personal. También se indica cómo utilizamos y compartimos sus datos en relación con la aplicación. Limitaciones y responsabilidad: Se establecen las limitaciones de responsabilidad tanto de nuestra empresa como del usuario en caso de incidencias, daños o perjuicios relacionados con el uso de la aplicación. Es esencial que lea detenidamente estas condiciones antes de realizar cualquier compra en nuestra aplicación. Si tiene alguna pregunta o inquietud sobre algún punto específico, nuestro equipo de atención al cliente estará encantado de brindarle la información adicional que necesite. Recuerde que al continuar utilizando nuestra aplicación y realizar una compra, está aceptando las condiciones de uso y se compromete a cumplirlas. Agradecemos su confianza y esperamos que disfrute de una experiencia satisfactoria utilizando nuestra aplicación. Atentamente, [4PARTY]</string>
</resources>
