<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView"
            android:orientation="vertical"
            android:background="#212121"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            tools:context=".LogInOutBusiness.RegisterBusiness">
        <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                app:lottie_autoPlay="true"
                android:layout_height="150dp"
                app:lottie_rawRes="@raw/registeranimation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="1dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"/>
        <TextView
                android:fontFamily="@font/robotobold"
                android:text="@string/tituloDatosPersonal"
                android:textColor="@color/morado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"
                android:id="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="151dp"
                app:layout_constraintHorizontal_bias="0.0"
        />

        <EditText
            android:id="@+id/dniAutonomoET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/textviewredondo"
            android:hint="@string/dniautonomo"
            android:paddingLeft="30dp"
            android:textColor="@color/morado"
            android:textColorHint="@color/morado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/nombreAutonomoET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/textviewredondo"
            android:hint="@string/nombreautono"
            android:paddingLeft="30dp"
            android:textColor="@color/morado"
            android:textColorHint="@color/morado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dniAutonomoET" />

        <EditText
            android:id="@+id/apellidoAutonomoET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:layout_marginEnd="8dp"
            android:background="@drawable/textviewredondo"
            android:hint="@string/apellidoautono"
            android:paddingLeft="30dp"
            android:textColor="@color/morado"
            android:textColorHint="@color/morado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreAutonomoET" />

        <EditText
            android:id="@+id/codigoPostalAutonomoET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:layout_marginEnd="8dp"
            android:background="@drawable/textviewredondo"
            android:hint="@string/direccionLocal"
            android:paddingLeft="30dp"
            android:textColor="@color/morado"
            android:textColorHint="@color/morado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apellidoAutonomoET" />

        <EditText
            android:id="@+id/nameEstablecimientoET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/textviewredondo"
            android:hint="@string/nameEstablecimientoautonomo"
            android:paddingLeft="30dp"
            android:textColor="@color/morado"
            android:fontFamily="@font/roboto"
            android:textColorHint="@color/morado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codigoPostalAutonomoET" />

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/titulo2creacioncorreo"
                  android:textSize="25sp"
                  android:textAlignment="center"
                  android:fontFamily="@font/robotobold"
                  android:textColor="@color/morado"
                  app:layout_constraintTop_toBottomOf="@+id/nameEstablecimientoET"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.0"
                  android:id="@+id/textview"
                  android:layout_marginTop="4dp"/>

        <EditText
            android:id="@+id/contraseniaAutonomoET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/textviewredondo"
            android:hint="@string/contrasenia"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:textColor="@color/morado"
            android:textColorHint="@color/morado"
            android:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correoAutonomoET" />

        <EditText
            android:id="@+id/correoAutonomoET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/textviewredondo"
            android:hint="@string/correoautono"
            android:inputType="textEmailAddress"
            android:paddingLeft="30dp"
            android:textColor="@color/morado"
            android:fontFamily="@font/roboto"
            android:textColorHint="@color/morado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview" />

        <EditText
            android:id="@+id/contrasenia2AutonomoET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/textviewredondo"
            android:hint="@string/contrasenia"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:textColor="@color/morado"
            android:textColorHint="@color/morado"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/roboto"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contraseniaAutonomoET" />

        <Button
            android:id="@+id/crearcuentaAutonomoBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/botonredondo"
            android:fontFamily="@font/robotobold"
            android:text="@string/botonregister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrasenia2AutonomoET" />

        <Button
            android:id="@+id/cancellautonomobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/botonredondo"
            android:fontFamily="@font/robotobold"
            android:text="Cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrasenia2AutonomoET" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
